# arca-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh
app/: __init__.py  __main__.py  main.py
app/api/: deps.py  ingest.py  memory.py
app/context/: memory.py
app/core/: config.py
app/schema/: canvas.py  ingest.py  memory.py
app/skills/arca-memory/: SKILL.md
app/static/css/: app.css  canvas.css  memory.css
app/static/js/app/: canvas.js  common.js  confirm-dialog.js  memory.js
app/templates/: base.html  canvas.html  memory.html
app/templates/partials/: auth_banner.html  toasts.html
app/util/: base_dir.py  canvas.py  embeds.py  ingest.py  memory.py
doc/: architecture.md  configuration.md  ingestion-plan.md  mcp-tools.md  rest-api.md  ui-improvement-plan.md
