[project]
name = "arca-mcp"
version = "0.7.0"
description = "Arca Memory Core - MCP Server for compact memories."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiocache>=0.12.3",
    "aiohttp>=3.13.3",
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.128.4",
    "fastmcp>=3.0.0b1",
    "google-genai>=1.62.0",
    "lancedb>=0.29.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-ulid>=3.1.0",
    "redis>=7.1.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
ingest = ["arca-ingest", "protobuf>=4.25", "python-multipart>=0.0.9", "sentencepiece>=0.2.0"]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
arca-ingest = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=8.3", "ruff>=0.15.8"]
