[project]
name = "arca-mcp"
version = "0.8.4"
description = "Arca Memory Core - MCP Server for compact memories."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiocache>=0.12.3",
    "aiohttp>=3.13.3",
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.128.4",
    "fastmcp>=3.0.0b1",
    "google-genai>=1.62.0",
    "lancedb>=0.29.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-ulid>=3.1.0",
    "redis>=7.1.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
ingest = ["arca-ingest", "protobuf>=4.25", "python-multipart>=0.0.9", "sentencepiece>=0.2.0"]
# Same as `ingest`, but pulls every optional format loader (PDF/DOCX/HTML/EPUB/FB2).
# Use this to enable all ingestion formats in one shot, e.g. in Docker:
#   docker build --build-arg ARCA_INSTALL_EXTRAS=ingest-all ...
ingest-all = ["arca-mcp[ingest]", "arca-ingest[all]"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
arca-ingest = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
# python-docx is dev-only: the docx loader parses via mammoth, but tests build their
# .docx fixtures with python-docx.
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.3",
    "python-docx>=1.1.2",
    "ruff>=0.15.8",
    "ty>=0.0.54",
]
